<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/textViewVacationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vacation_title"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewHotelName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/hotel_name"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textViewStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/start_date"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textViewEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/end_date"
        android:textSize="14sp" />

</LinearLayout>