<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/vacation_bg"
    tools:context=".activity.VacationDetailsActivity">

    <TextView
        android:id="@+id/textViewScreenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_a_vacation"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextVacationTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/vacation_title"
        android:autofillHints="Vacation Title"
        android:inputType="text"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewScreenTitle" />

    <EditText
        android:id="@+id/editTextHotelName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hotel_name"
        android:textColor="@color/white"
        android:autofillHints="Hotel Name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextVacationTitle" />

    <EditText
        android:id="@+id/editTextStartDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/start_date"
        android:textColor="@color/white"
        android:autofillHints="Start Date"
        android:focusable="false"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextHotelName" />

    <EditText
        android:id="@+id/editTextEndDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/end_date"
        android:textColor="@color/white"
        android:autofillHints="End Date"
        android:focusable="false"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextStartDate" />

    <Button
        android:id="@+id/buttonShareVacation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_vacation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.651" />

    <Button
        android:id="@+id/buttonVacationAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="84dp"
        android:onClick="onVacationAlarmButtonClick"
        android:text="@string/notify_me"
        app:layout_constraintBaseline_toTopOf="@string/add_vacation"
        app:layout_constraintBottom_toBottomOf="@+id/buttonShareVacation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.449"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonAddVacation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/add_vacation"
        app:layout_constraintBottom_toTopOf="@+id/buttonAddAExcursion"
        app:layout_constraintEnd_toStartOf="@+id/buttonSaveVacation"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonSaveVacation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:enabled="false"
        android:text="@string/save_changes"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/buttonDeleteVacation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/buttonAddVacation" />

    <Button
        android:id="@+id/buttonAddAExcursion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="56dp"
        android:text="@string/add_excursions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonDeleteVacation"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonDeleteVacation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="56dp"
        android:enabled="false"
        android:text="@string/delete_vacation"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonAddAExcursion" />

</androidx.constraintlayout.widget.ConstraintLayout>
