<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ExcursionDetailsActivity">

    <TextView
        android:id="@+id/textViewScreenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextExcursionTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/excursion_title"
        android:autofillHints="Excursion Title"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewScreenTitle" />

    <EditText
        android:id="@+id/editTextExcursionDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/excursion_date"
        android:autofillHints="Excursion Date"
        android:focusable="false"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextExcursionTitle" />


    <Button
        android:id="@+id/buttonExcursionAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="344dp"
        android:text="@string/notify_me"
        app:layout_constraintBottom_toTopOf="@+id/buttonCancelExcursion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonAddExcursion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/add_excursion"
        app:layout_constraintBottom_toTopOf="@+id/buttonCancelExcursion"
        app:layout_constraintEnd_toStartOf="@+id/buttonSaveExcursion"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonSaveExcursion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:enabled="false"
        android:text="@string/save_changes"
        app:layout_constraintBottom_toTopOf="@+id/buttonDeleteExcursion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/buttonAddExcursion" />

    <Button
        android:id="@+id/buttonCancelExcursion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="56dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonDeleteExcursion"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonDeleteExcursion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="56dp"
        android:enabled="false"
        android:text="@string/delete_excursion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonCancelExcursion" />
</androidx.constraintlayout.widget.ConstraintLayout>